# gmail-takeout-viewer

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  SECURITY.md  analyze_mbox_stats.py  app.py  config.example.json  import_mbox.py  pyproject.toml  requirements.txt  start.bat  start.command  start.sh  start_portable.bat
examples/: sample_10.mbox
examples/sample_archive/: .mail-archive-builder.json  Start Mail Viewer.sh
examples/sample_archive/app/: import_mbox.py  portable_launch.py
examples/sample_archive/data/: gmail_index.sqlite
examples/sample_archive/data/reports/: import_summary.json
portable/: launch.bat  launch.command  launch.py  launch.sh
tests/: test_build_archive_e2e.py  test_compact_archive.py
tools/: __init__.py  bootstrap_portable_windows.ps1  build_archive.py
tools/archive_templates/: Start Mail Viewer.bat  Start Mail Viewer.command
viewer/: __init__.py  app.py
