[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-takeout-viewer"
version = "0.1.0"
description = "Local-only Gmail Takeout MBOX importer and browser UI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Gmail Takeout Viewer contributors" }
]
keywords = ["gmail", "takeout", "mbox", "sqlite", "email", "archive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Email",
  "Topic :: Database",
]
dependencies = []

[project.scripts]
gmail-takeout-viewer = "app:main"
gmail-takeout-import = "import_mbox:main"
gmail-takeout-stats = "analyze_mbox_stats:main"

[tool.setuptools]
py-modules = ["app", "import_mbox", "analyze_mbox_stats", "start"]
