[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-takeout-archive-builder"
version = "0.1.0"
description = "Build standalone portable folders from Gmail Takeout MBOX exports"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Gmail Takeout Archive Builder contributors" }
]
keywords = ["gmail", "takeout", "mbox", "sqlite", "email", "archive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Email",
  "Topic :: Database",
]
dependencies = []

[project.scripts]
gmail-takeout-build-archive = "tools.build_archive:main"
gmail-takeout-import = "viewer.import_mbox:main"
gmail-takeout-stats = "viewer.analyze_mbox_stats:main"

[tool.setuptools]
packages = ["tools", "viewer"]

[tool.setuptools.package-data]
tools = ["archive_templates/*", "archive_templates/app/*"]
